# opengl_viewer

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: point.fs  point.vs
src/: CMakeLists.txt  camera.cpp  camera.h  glad.c  opengl_viewer.cpp  shader.cpp  shader.h  viewer.cpp  viewer.h
